# touch-n-drink

./: LICENSE-MIT  README.md
.github/workflows/: ci.yaml
.zed/: settings.json
firmware/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cfg.toml  config-example.json  espflash.toml  espflash_ports.toml  partitions.csv  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/common/: Cargo.toml
firmware/common/src/: article.rs  config.rs  lib.rs  nfc.rs  ota.rs  reader.rs  schedule.rs  telemetry.rs  time.rs  user.rs  util.rs
firmware/common/src/mixpanel/: mod.rs
firmware/common/src/ui/: auth.rs  common.rs  error.rs  mod.rs  purchase.rs  splash.rs
firmware/common/src/vereinsflieger/: mod.rs  proto_articles.rs  proto_user.rs
firmware/esp32/: Cargo.toml  partitions.csv
firmware/esp32/src/: buzzer.rs  config.rs  display.rs  keypad.rs  main.rs  nfc.rs  update.rs  wifi.rs
firmware/src/: article.rs  buzzer.rs  config.rs  display.rs  error.rs  http.rs  json.rs  keypad.rs  main.rs  nfc.rs  ota.rs  pn532.rs  reader.rs  schedule.rs  screen.rs  telemetry.rs  time.rs  ui.rs  user.rs  util.rs  vereinsflieger.rs  wifi.rs
firmware/src/json/: error.rs  mod.rs  reader.rs  value.rs  writer.rs
firmware/src/mixpanel/: mod.rs  proto_event.rs
firmware/src/ui/: auth.rs  common.rs  error.rs  mod.rs  purchase.rs  splash.rs
firmware/src/vereinsflieger/: mod.rs  proto_articles.rs  proto_auth.rs  proto_sale.rs  proto_user.rs
firmware/xtask/: Cargo.toml
firmware/xtask/src/: chip.rs  main.rs
hardware/: .gitignore  CHANGELOG.md  ESP32-C3_SuperMini.kicad_sym  README.md  assembly.FCStd  case.FCStd  components.FCStd  lasercutting.FCStd  lasercutting.dxf  pcb.kicad_pcb  pcb.kicad_pro  pcb.kicad_sch  sym-lib-table
images/: touch-n-drink.pixil
pcb/: .gitignore  CHANGELOG.md  ESP32-C3_SuperMini.kicad_sym  ESP32-C3_SuperMini.step  README.md  fp-lib-table  touch-n-drink.kicad_pcb  touch-n-drink.kicad_prl  touch-n-drink.kicad_pro  touch-n-drink.kicad_sch
pcb/ESP32-C3_SuperMini.pretty/: ESP32-C3_SuperMini.kicad_mod
