[workspace]
resolver = "3"
members = [
    "common",
    "esp32",
    "xtask",
]
default-members = ["common", "xtask"]

[workspace.package]
version = "2.0.3"
authors = ["Andreas Neuhaus <git@zargony.com>"]
edition = "2024"
description = "Firmware for cashless payment device for cold drinks at the aeroclub at EDLH"
repository = "https://github.com/zargony/touch-n-drink"
license = "EUPL-1.2"
publish = false

[workspace.lints.clippy]
pedantic = "warn"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
const-hex = { version = "1.14", default-features = false }
derive_more = { version = "2.1", default-features = false }
embassy-embedded-hal = "0.5"
embassy-executor = "0.9"
embassy-futures = "0.1"
embassy-net = { version = "0.8", features = ["dhcpv4", "dns", "tcp", "proto-ipv4"] }
embassy-sync = "0.7"
embassy-time = "0.5"
embedded-graphics = "0.8"
embedded-hal-async = "1.0"
embedded-io-async = { version = "0.7", features = ["alloc"] }
embedded-layout = "0.4"
embedded-nal-async = "0.9"
embedded-storage = "0.3"
embedded-text = "0.7"
log = { version = "0.4", features = ["release_max_level_info"] }
rand_core = "0.9"
reqwless = { version = "0.14", default-features = false, features = ["alloc", "embedded-tls"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.17", default-features = false, features = ["alloc", "chrono", "macros"] }
sha2 = { version = "0.10", default-features = false }

[profile.dev]
# FIXME: LTO slows down linking a lot! But it's required to keep the app image small enough :-(
lto = "fat"
# Rust debug code is slow, so always build with some optimization
opt-level = "s"

[profile.release]
# LLVM can perform better optimizations using a single thread
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"
