[package]
name = "touch-n-drink-esp32"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "touch-n-drink-esp32"
test = false
doctest = false
bench = false

[lints]
workspace = true

[dependencies]
common = { path = "../common", package = "touch-n-drink-common" }

chrono = { workspace = true }
const-hex = { workspace = true }
derive_more = { workspace = true, features = ["display", "from"] }
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true }
embassy-futures = { workspace = true }
embassy-net = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embedded-graphics = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-storage = { workspace = true }
log = { workspace = true }
reqwless = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

display-interface = "0.5"
esp-alloc = { version = "0.9", features = ["esp32c3"] }
esp-backtrace = { version = "0.18", features = ["esp32c3", "custom-halt", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c3"] }
esp-hal = { version = "1.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.16", features = ["esp32c3", "log-04"] }
esp-radio = { version = "0.17", features = ["esp32c3", "unstable", "wifi"] }
esp-rtos = { version = "0.2", features = ["embassy", "esp-alloc", "esp-radio", "esp32c3"] }
esp-storage = { version = "0.8", features = ["esp32c3"] }
pn532 = "0.5"
ssd1306 = { version = "0.10", features = ["async"] }

[features]
default = []
# Enable additional logging in dependencies
log = [
    "embassy-executor/log", "embassy-futures/log", "embassy-net/log", "embassy-sync/log", "embassy-time/log",
    "esp-bootloader-esp-idf/log-04", "esp-hal/log-04", "esp-radio/log-04", "esp-rtos/log-04",
]
